[gd_scene format=3 uid="uid://w2ctmja3upr4"]

[ext_resource type="Script" uid="uid://bws4c8dh6es2n" path="res://tiitleend.gd" id="1_o2efx"]
[ext_resource type="PackedScene" uid="uid://dddo2xlmb5mx5" path="res://Models/fence.tscn" id="2_77yab"]
[ext_resource type="PackedScene" uid="uid://b4gh6p0q0uf63" path="res://Models/BarnClose.tscn" id="3_qwud8"]
[ext_resource type="PackedScene" uid="uid://bisq706ua6qna" path="res://Models/big_barn.tscn" id="4_rrmmp"]
[ext_resource type="PackedScene" uid="uid://chnb15o5vsxid" path="res://Models/water_tower.tscn" id="5_xpj8j"]
[ext_resource type="PackedScene" uid="uid://dyjivh8d637ar" path="res://Models/silo_house.tscn" id="6_un3r8"]
[ext_resource type="PackedScene" uid="uid://ch6ga2a8cox7g" path="res://Models/silo.tscn" id="7_avcgl"]
[ext_resource type="PackedScene" uid="uid://brmptwgudfy7p" path="res://Models/chicken_coop.tscn" id="8_ns8ov"]
[ext_resource type="PackedScene" uid="uid://jjd0lf6rhkki" path="res://Models/mounting_3.tscn" id="9_wjllj"]
[ext_resource type="PackedScene" uid="uid://jvfdjf2y44f7" path="res://Models/grass.tscn" id="10_g86d8"]
[ext_resource type="Texture2D" uid="uid://h2qk5a6cgqbr" path="res://shader/seamless-textured-grass-natural-grass-pattern/Cartoon_green_texture_grass.jpg" id="11_g5js2"]
[ext_resource type="Script" uid="uid://d0n26q5t000dq" path="res://camera_pivot.gd" id="12_wwvys"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7mycd"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_272bh"]
sky_material = SubResource("ProceduralSkyMaterial_7mycd")

[sub_resource type="Environment" id="Environment_5vw27"]
background_mode = 2
sky = SubResource("Sky_272bh")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_efxa6"]
vertices = PackedVector3Array(0.663887, 1.4823207, 3.194809, 0.16388702, 1.4823207, 3.694809, 0.663887, 1.4823207, 4.194809, 2.413887, 1.4823207, 3.944809, -0.33611298, 1.7323207, -43.55519, 2.663887, 1.4823207, 4.944809, 57.413887, 1.7323207, 4.944809, 57.163887, 1.9823207, -43.80519, 0.663887, 1.4823207, 1.694809, -0.33611298, 1.4823207, 1.444809, -1.586113, 1.4823207, 1.944809, -53.086113, 1.4823207, -43.30519, -52.836113, 1.2323207, 2.694809, -1.586113, 1.4823207, 2.694809, -1.086113, 1.4823207, 3.694809, 0.41388702, 1.4823207, 5.694809, 1.663887, 1.4823207, 6.194809, -52.586113, 0.73232067, 71.44481, 1.663887, 0.98232067, 71.19481, 2.663887, 1.4823207, 5.694809, 57.663887, 1.2323207, 70.94481)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 4, 5), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 7), PackedInt32Array(3, 0, 8), PackedInt32Array(8, 9, 4), PackedInt32Array(3, 8, 4), PackedInt32Array(9, 10, 4), PackedInt32Array(4, 10, 12), PackedInt32Array(4, 12, 11), PackedInt32Array(10, 13, 12), PackedInt32Array(14, 1, 2), PackedInt32Array(2, 15, 14), PackedInt32Array(14, 15, 12), PackedInt32Array(12, 13, 14), PackedInt32Array(15, 16, 12), PackedInt32Array(12, 16, 18), PackedInt32Array(12, 18, 17), PackedInt32Array(19, 5, 6), PackedInt32Array(19, 6, 16), PackedInt32Array(16, 6, 18), PackedInt32Array(18, 6, 20)]
agent_height = 10.0
region_min_size = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(0.60520804, 0.5314884, 5.7756904e-07, 1)
albedo_texture = ExtResource("11_g5js2")
uv1_triplanar = true

[sub_resource type="LabelSettings" id="LabelSettings_nnpyg"]
font_size = 130

[sub_resource type="LabelSettings" id="LabelSettings_2q4g1"]
line_spacing = -30.0
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_o2efx"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_77yab"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_qwud8"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_rrmmp"]
font_size = 40

[node name="Main" type="Node3D" unique_id=1541389728]
script = ExtResource("1_o2efx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=829527876]
transform = Transform3D(-0.9034751, 0.40386462, -0.14361835, 0.32451966, 0.86337024, 0.38636628, 0.28003547, 0.3024654, -0.9110954, 0, 0, 0)
light_color = Color(0.93976927, 0.45729816, 0.27959165, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=172660304]
environment = SubResource("Environment_5vw27")

[node name="Fences" type="Node3D" parent="." unique_id=1791906734]

[node name="Fence4" parent="Fences" unique_id=694226645 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 1, 15)

[node name="Fence5" parent="Fences" unique_id=2033973908 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1, 15)

[node name="Fence6" parent="Fences" unique_id=1732788656 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 45)

[node name="Fence7" parent="Fences" unique_id=1436031658 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 45)

[node name="Fence8" parent="Fences" unique_id=667253960 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 45)

[node name="Fence9" parent="Fences" unique_id=1667145105 instance=ExtResource("2_77yab")]
transform = Transform3D(0.7655281, 0, 0.64340234, 0, 1, 0, -0.64340234, 0, 0.7655281, 19.885368, 0.9999999, 39.971004)

[node name="Fence11" parent="Fences" unique_id=2069765136 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 25, 1, 18)

[node name="Fence12" parent="Fences" unique_id=1052666061 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 25, 1, 24)

[node name="Fence13" parent="Fences" unique_id=1246121323 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 25, 1, 30)

[node name="Fence14" parent="Fences" unique_id=878799840 instance=ExtResource("2_77yab")]
transform = Transform3D(-0.50000006, 0, -0.8660254, 0, 1, 0, 0.8660254, 0, -0.50000006, 23.565216, 1, 35.531944)

[node name="Fence17" parent="Fences" unique_id=647983659 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -5, 1, 24)

[node name="Fence18" parent="Fences" unique_id=1324527707 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -5, 1, 30)

[node name="Fence19" parent="Fences" unique_id=167284954 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -5, 1, 36)

[node name="Fence20" parent="Fences" unique_id=478741808 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -5, 1, 42)

[node name="Fence21" parent="Fences" unique_id=1414473745 instance=ExtResource("2_77yab")]
transform = Transform3D(0.9430312, 0, 0.33270434, 0, 1, 0, -0.33270434, 0, 0.9430312, -23.545418, 1.101656, -26.486546)

[node name="Fence23" parent="Fences" unique_id=1727563638 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.806812, 1.171231, -27.545439)

[node name="Fence28" parent="Fences" unique_id=518538836 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 1, -10)

[node name="Fence29" parent="Fences" unique_id=1376481415 instance=ExtResource("2_77yab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, -10)

[node name="Fence31" parent="Fences" unique_id=982526244 instance=ExtResource("2_77yab")]
transform = Transform3D(0.35208666, 0, -0.9359674, 0, 1, 0, 0.9359674, 0, 0.35208666, -1.9606127, 1, -24.764006)

[node name="Fence32" parent="Fences" unique_id=1237055069 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1, 1, -19)

[node name="Fence33" parent="Fences" unique_id=150973467 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1, 1, -13)

[node name="Fence36" parent="Fences" unique_id=951540726 instance=ExtResource("2_77yab")]
transform = Transform3D(-0.79986286, 0, -0.6001829, 0, 1, 0, 0.6001829, 0, -0.79986286, -28.640085, 0.99999976, -23.770855)

[node name="Fence37" parent="Fences" unique_id=47214139 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -31, 1, -19)

[node name="Fence38" parent="Fences" unique_id=1838367147 instance=ExtResource("2_77yab")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -31, 1, -13)

[node name="Fence10" parent="Fences" unique_id=206338562 instance=ExtResource("2_77yab")]
transform = Transform3D(0.8256653, 0, 0.5641602, 0, 1, 0, -0.5641602, 0, 0.8256653, 15.298013, 0.8905452, 43.545475)

[node name="barns" type="Node3D" parent="." unique_id=1105342678]

[node name="barn_close2" parent="barns" unique_id=1132856559 instance=ExtResource("3_qwud8")]
transform = Transform3D(0.8660254, 0, -0.5, 0, 1, 0, 0.5, 0, 0.8660254, 8, 1, -17)

[node name="barn_close" parent="barns" unique_id=1831988559 instance=ExtResource("3_qwud8")]
transform = Transform3D(0.258819, 0, -0.9659258, 0, 1, 0, 0.9659258, 0, 0.258819, 17, 1, -8)

[node name="BigBarn" parent="barns" unique_id=2049255285 instance=ExtResource("4_rrmmp")]
transform = Transform3D(-0.70710677, 0, 0.70710677, 0, 1, 0, -0.70710677, 0, -0.70710677, -23.192917, 1, 19.8673)

[node name="WaterTower" parent="barns" unique_id=129760143 instance=ExtResource("5_xpj8j")]
transform = Transform3D(-0.25881904, 0, 0.9659258, 0, 1, 0, -0.9659258, 0, -0.25881904, -9.39841, 0.95112216, 33.150475)

[node name="WaterTower2" parent="barns" unique_id=1020560196 instance=ExtResource("5_xpj8j")]
transform = Transform3D(0.7094232, 0, 0.70478284, 0, 1, 0, -0.70478284, 0, 0.7094232, -18.93008, 0.95112026, 28.204847)

[node name="WaterTower3" parent="barns" unique_id=1478226127 instance=ExtResource("5_xpj8j")]
transform = Transform3D(0.46694237, 0, 0.8842878, 0, 1, 0, -0.8842878, 0, 0.46694237, -15.131373, 0.9999962, 32.067448)

[node name="sillo" type="Node3D" parent="." unique_id=19842775]

[node name="Silo_House" parent="sillo" unique_id=1098882199 instance=ExtResource("6_un3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1, 8)

[node name="Silo" parent="sillo" unique_id=292198358 instance=ExtResource("7_avcgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 1, 8)

[node name="Silo2" parent="sillo" unique_id=884466950 instance=ExtResource("7_avcgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1, 8)

[node name="Silo_House2" parent="sillo" unique_id=1984743325 instance=ExtResource("6_un3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 1)

[node name="Silo3" parent="sillo" unique_id=1163853284 instance=ExtResource("7_avcgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, 1)

[node name="Silo4" parent="sillo" unique_id=72220142 instance=ExtResource("7_avcgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 1, 1)

[node name="Coop" type="Node3D" parent="." unique_id=1030467127]

[node name="ChickenCoop6" parent="Coop" unique_id=1493109924 instance=ExtResource("8_ns8ov")]
transform = Transform3D(0.8660254, 0, 0.5, 0, 1, 0, -0.5, 0, 0.8660254, -24.1, 0.90000004, 9)

[node name="ChickenCoop" parent="Coop" unique_id=841989167 instance=ExtResource("8_ns8ov")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.300001, 0.90000004, 5.7000003)

[node name="ChickenCoop2" parent="Coop" unique_id=1981860750 instance=ExtResource("8_ns8ov")]
transform = Transform3D(0.64278764, 0, -0.76604444, 0, 1, 0, 0.76604444, 0, 0.64278764, -23.9, 0.90000004, 2.7)

[node name="ChickenCoop4" parent="Coop" unique_id=591023046 instance=ExtResource("8_ns8ov")]
transform = Transform3D(0.8660254, 0, 0.5, 0, 1, 0, -0.5, 0, 0.8660254, -17.5, 0.90000004, 3.9)

[node name="ChickenCoop3" parent="Coop" unique_id=79213555 instance=ExtResource("8_ns8ov")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -20.699999, 0.90000004, 1.9999998)

[node name="montains" type="Node3D" parent="." unique_id=1071350603]

[node name="Mounting_3" parent="montains" unique_id=184801416 instance=ExtResource("9_wjllj")]
transform = Transform3D(-0.72254103, -0.002807459, 0.69132346, -0.0050022034, 1.1099751, -0.0015695482, -0.69131, -0.005097302, -0.7225437, 26, 0.7836342, -24)

[node name="Mounting_4" parent="montains" unique_id=1045274688 instance=ExtResource("9_wjllj")]
transform = Transform3D(0.097269446, 0, 0.966253, 0, 1, 0, -1.477722, 0, 0.06360255, 34.460903, -0.6790042, -1.1871271)

[node name="Mounting_5" parent="montains" unique_id=1621917503 instance=ExtResource("9_wjllj")]
transform = Transform3D(0.7561049, 0, 0.65445054, 0, 1, 0, -0.65445054, 0, 0.7561049, 33.393787, 1.6809717, 41.790913)

[node name="Mounting_6" parent="montains" unique_id=1206494201 instance=ExtResource("9_wjllj")]
transform = Transform3D(0.8947628, 0.004190204, -0.4465258, -0.0050022034, 1.1099751, -0.0015695483, 0.44651374, 0.00403813, 0.8947694, -20.63725, 0.7836342, 51.752007)

[node name="Mounting_7" parent="montains" unique_id=1850824893 instance=ExtResource("9_wjllj")]
transform = Transform3D(0.34440678, 0, -0.9417933, 0, 1, 0, 1.4403151, 0, 0.22520071, -35.47043, -0.6790042, 32.464943)

[node name="Mounting_8" parent="montains" unique_id=736979466 instance=ExtResource("9_wjllj")]
transform = Transform3D(-0.9792652, 0, -0.2025823, 0, 1, 0, 0.2025823, 0, -0.9792652, 8.566562, -6.184412, 64.357315)

[node name="Mounting_9" parent="montains" unique_id=348059845 instance=ExtResource("9_wjllj")]
transform = Transform3D(-0.6105572, -0.014809533, -0.8128776, -0.022067713, 1.1845182, -0.0064050187, 1.3808681, 0.012381734, -0.35951987, -41.058865, -0.6790042, -12.481422)

[node name="Mounting_10" parent="montains" unique_id=2037621862 instance=ExtResource("9_wjllj")]
transform = Transform3D(1.4946461, 0.005437264, -0.06439103, -0.0074932524, 1.1126822, -0.0015173719, 0.09976097, 0.002113255, 0.9646091, -7.6899014, -26.230455, -47.837254)

[node name="Grass" type="Node3D" parent="." unique_id=1155620650]

[node name="Grass_24" parent="Grass" unique_id=125227361 instance=ExtResource("10_g86d8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9880099, 1.3037969, -36.235027)

[node name="Grass_25" parent="Grass" unique_id=224514111 instance=ExtResource("10_g86d8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.0034947, 1.3037978, -38.114822)

[node name="Grass_26" parent="Grass" unique_id=116787984 instance=ExtResource("10_g86d8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9510236, 1.3037978, -33.38597)

[node name="Grass_27" parent="Grass" unique_id=1825790880 instance=ExtResource("10_g86d8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.182691, 1.3037978, -34.702892)

[node name="Grass_32" parent="Grass" unique_id=1769274740 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.32698706, 0, 0.94502884, 0, 1, 0, -0.94502884, 0, -0.32698706, -25.1408, 0.721048, 40.885468)

[node name="Grass_33" parent="Grass" unique_id=410245670 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.685399, 0, -0.7281677, 0, 1, 0, 0.7281677, 0, -0.685399, -20.562641, 0.721048, 38.783813)

[node name="Grass_34" parent="Grass" unique_id=449625319 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.84613734, 0, 0.53296494, 0, 1, 0, -0.53296494, 0, 0.84613734, -16.95869, 0.721048, 42.022346)

[node name="Grass_35" parent="Grass" unique_id=775669374 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.8647398, 0, 0.50222015, 0, 1, 0, -0.50222015, 0, -0.8647398, -13.872695, 0.721048, 46.00394)

[node name="Grass_36" parent="Grass" unique_id=420932085 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.43557677, 0, -0.90015155, 0, 1, 0, 0.90015155, 0, 0.43557677, -18.855246, 0.7210461, 34.100388)

[node name="Grass_37" parent="Grass" unique_id=1362888667 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.5952576, 0, 0.8035349, 0, 1, 0, -0.8035349, 0, 0.5952576, -23.155289, 0.7210461, 36.72453)

[node name="Grass_38" parent="Grass" unique_id=1581524119 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.7777826, 0, -0.62853336, 0, 1, 0, 0.62853336, 0, -0.7777826, -27.114225, 0.7210461, 33.931076)

[node name="Grass_39" parent="Grass" unique_id=755780587 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.91767836, 0, -0.39732403, 0, 1, 0, 0.39732403, 0, 0.91767836, -30.645939, 0.7210461, 30.338936)

[node name="Grass_40" parent="Grass" unique_id=931166387 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.32698706, 0, 0.94502884, 0, 1, 0, -0.94502884, 0, -0.32698706, -12.909966, 0.7210461, 45.38416)

[node name="Grass_41" parent="Grass" unique_id=1229054814 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.685399, 0, -0.7281677, 0, 1, 0, 0.7281677, 0, -0.685399, -8.331807, 0.7210461, 43.282505)

[node name="Grass_42" parent="Grass" unique_id=1291191005 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.028008908, 0, 0.99960774, 0, 1, 0, -0.99960774, 0, -0.028008908, -5.9878726, 0.72104657, 48.326565)

[node name="Grass_43" parent="Grass" unique_id=1634222859 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.8647398, 0, 0.50222015, 0, 1, 0, -0.50222015, 0, -0.8647398, -1.641861, 0.7210461, 50.502632)

[node name="Grass_44" parent="Grass" unique_id=1050599376 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.5469205, 0, 0.8371846, 0, 1, 0, -0.8371846, 0, 0.5469205, -39.32716, 1.0403582, -0.3428297)

[node name="Grass_45" parent="Grass" unique_id=591521660 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.9953812, 0, 0.09600201, 0, 1, 0, -0.09600201, 0, -0.9953812, -34.862247, 1.0403582, 1.9897835)

[node name="Grass_46" parent="Grass" unique_id=124379842 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.9394775, 0, -0.34261048, 0, 1, 0, 0.34261048, 0, 0.9394775, -35.215847, 1.0403582, 6.822123)

[node name="Grass_47" parent="Grass" unique_id=1674913062 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.1324468, 0, 0.99119014, 0, 1, 0, -0.99119014, 0, -0.1324468, -36.474068, 1.0403582, 11.6999655)

[node name="Grass_48" parent="Grass" unique_id=1879264996 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.44494784, 0, -0.89555657, 0, 1, 0, 0.89555657, 0, -0.44494784, -30.114025, 1.0403563, 0.47186637)

[node name="Grass_49" parent="Grass" unique_id=367329265 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.99977076, 0, 0.021413594, 0, 1, 0, -0.021413594, 0, 0.99977076, -34.82172, 1.0403563, -1.3209324)

[node name="Grass_50" parent="Grass" unique_id=2144464277 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.97317886, 0, 0.23004977, 0, 1, 0, -0.23004977, 0, -0.97317886, -35.03737, 1.0403563, -6.1613913)

[node name="Grass_51" parent="Grass" unique_id=130018017 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.24779382, 0, -0.9688128, 0, 1, 0, 0.9688128, 0, 0.24779382, -34.359974, 1.0403563, -11.153147)

[node name="Grass_52" parent="Grass" unique_id=1306603689 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.5469205, 0, 0.8371846, 0, 1, 0, -0.8371846, 0, 0.5469205, -35.39456, 1.0403563, 12.081592)

[node name="Grass_53" parent="Grass" unique_id=164334815 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.9953812, 0, 0.09600201, 0, 1, 0, -0.09600201, 0, -0.9953812, -30.929653, 1.0403563, 14.414204)

[node name="Grass_54" parent="Grass" unique_id=633805825 instance=ExtResource("10_g86d8")]
transform = Transform3D(0.77314335, 0, 0.6342314, 0, 1, 0, -0.6342314, 0, 0.77314335, -33.48225, 1.0403568, 19.35595)

[node name="Grass_55" parent="Grass" unique_id=889926883 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.1324468, 0, 0.99119014, 0, 1, 0, -0.99119014, 0, -0.1324468, -32.541477, 1.0403563, 24.124386)

[node name="Grass_28" parent="Grass" unique_id=1522549195 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.7646404, 0, 0.6444573, 0, 1, 0, -0.6444573, 0, -0.7646404, 10.367112, 1.3037969, -24.014149)

[node name="Grass_29" parent="Grass" unique_id=983430870 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.7646404, 0, 0.6444573, 0, 1, 0, -0.6444573, 0, -0.7646404, 6.1035976, 1.3037978, -25.149136)

[node name="Grass_30" parent="Grass" unique_id=1858268129 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.7646404, 0, 0.6444573, 0, 1, 0, -0.6444573, 0, -0.7646404, 8.426622, 1.3037978, -29.37565)

[node name="Grass_31" parent="Grass" unique_id=1144440058 instance=ExtResource("10_g86d8")]
transform = Transform3D(-0.7646404, 0, 0.6444573, 0, 1, 0, -0.6444573, 0, -0.7646404, 16.091211, 1.3037978, -21.193472)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="." unique_id=1392437689]
navigation_mesh = SubResource("NavigationMesh_efxa6")

[node name="ground" type="CSGBox3D" parent="NavigationRegion3D" unique_id=475004050]
physics_interpolation_mode = 1
transform = Transform3D(0.99996704, -0.005538369, 0.0059248903, 0.00557785, 0.9999623, -0.0066628978, -0.005887736, 0.006695753, 0.99996036, 2.3255315, 0.32985345, 13.823339)
use_collision = true
size = Vector3(111.13482, 1.305, 115.59857)
material = SubResource("StandardMaterial3D_h2yge")

[node name="CameraPivot" type="Node3D" parent="." unique_id=1796489558]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 2, 2.9)
script = ExtResource("12_wwvys")

[node name="Camera3D" type="Camera3D" parent="CameraPivot" unique_id=388827485]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89999986, 0)
fov = 37.58826

[node name="Control" type="Control" parent="." unique_id=447960561]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.003
offset_bottom = 0.05596924
mouse_filter = 1

[node name="Button" type="Button" parent="Control" unique_id=1119724200]
layout_mode = 0
offset_left = 272.0
offset_top = 489.0
offset_right = 464.0
offset_bottom = 563.0
theme_override_font_sizes/font_size = 40
text = "Try Again"

[node name="Button2" type="Button" parent="Control" unique_id=1056432796]
layout_mode = 0
offset_left = 645.0
offset_top = 487.0
offset_right = 769.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Label" type="Label" parent="Control" unique_id=275100322]
layout_mode = 0
offset_left = 10.0
offset_top = -43.0
offset_right = 199.0
offset_bottom = 271.0
text = "5"
label_settings = SubResource("LabelSettings_nnpyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control" unique_id=2143120857]
layout_mode = 0
offset_left = 140.0
offset_top = -46.0
offset_right = 663.0
offset_bottom = 268.0
text = "minutes to
escape"
label_settings = SubResource("LabelSettings_2q4g1")
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Control" unique_id=1870151583]
layout_mode = 0
offset_left = 334.0
offset_top = 202.0
offset_right = 725.0
offset_bottom = 452.0

[node name="Label" type="Label" parent="Control/Panel" unique_id=1448279980]
layout_mode = 0
offset_left = 33.0
offset_top = 28.0
offset_right = 121.0
offset_bottom = 60.0
text = "Tomatoes:"
label_settings = SubResource("LabelSettings_o2efx")

[node name="tomatoes" type="Label" parent="Control/Panel/Label" unique_id=1383335486]
layout_mode = 0
offset_left = 145.0
offset_top = 3.0
offset_right = 233.0
offset_bottom = 35.0
text = "0"
label_settings = SubResource("LabelSettings_77yab")

[node name="Label2" type="Label" parent="Control/Panel" unique_id=387597229]
layout_mode = 0
offset_left = 36.0
offset_top = 68.0
offset_right = 162.0
offset_bottom = 103.0
text = "Enemies Kill:"
label_settings = SubResource("LabelSettings_o2efx")

[node name="kill" type="Label" parent="Control/Panel/Label2" unique_id=512747275]
layout_mode = 0
offset_left = 165.0
offset_top = 3.0
offset_right = 253.0
offset_bottom = 35.0
text = "37"
label_settings = SubResource("LabelSettings_77yab")

[node name="Label3" type="Label" parent="Control/Panel" unique_id=31467781]
layout_mode = 0
offset_left = 82.0
offset_top = 176.0
offset_right = 190.0
offset_bottom = 231.0
text = "Total:"
label_settings = SubResource("LabelSettings_qwud8")

[node name="total" type="Label" parent="Control/Panel/Label3" unique_id=1771559612]
layout_mode = 0
offset_left = 125.0
offset_top = 2.0
offset_right = 274.0
offset_bottom = 57.0
text = "9999"
label_settings = SubResource("LabelSettings_rrmmp")

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
